# flightdeck

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  claude-progress.txt  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6e8b4ccadddd_open_jaw_return_legs.py  ca11fc964b29_initial_schema.py  e3f8a12b90d4_price_watches_and_alerts.py
app/: config.py  db.py  main.py
app/cli/: __init__.py  client.py  output.py
app/integrations/: amadeus.py  kiwi.py  serpapi.py  types.py
app/models/: __init__.py  airline.py  airport.py  base.py  offer.py  points_program.py  price_history.py  search.py  watch.py
app/services/: alert_rules.py  booking.py  cache.py  deals.py  dedup.py  fare_discovery.py  fare_risks.py  geo.py  health.py  notifications.py  points.py  ranking.py  route_optimizer.py  timing.py  timing_analyzer.py  watches.py
app/static/: index.html
app/workers/: celery_app.py  price_history_scraper.py  watch_checker.py
data/: airlines.json  airports.csv  nearby_airports.json  transfer_partners.json
scripts/: seed_airlines.py  seed_airports.py  seed_transfer_partners.py
tests/: test_alert_rules.py  test_amadeus_normalize.py  test_booking.py  test_cache.py  test_cli_rendering.py  test_deals.py  test_dedup.py  test_fare_risks.py  test_geo.py  test_kiwi_normalize.py  test_notifications.py  test_points.py  test_ranking.py  test_route_optimizer.py  test_schemas.py  test_serpapi_normalize.py  test_timing.py  test_web.py
tests/integrations/: conftest.py  (+11 more)
(+25 files in other folders)
