[project]
name = "flightdeck"
version = "0.1.0"
description = "Flight search, analysis, and price tracking system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
]

[project.scripts]
flightdeck = "app.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.2",
    "ruff>=0.7.0",
    "httpie>=3.2.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
